--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/uuid": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "convertapi": "^1.15.0",
     "multer": "^2.0.2",
     "pdf-lib": "^1.17.1",
     "reflect-metadata": "^0.2.2",
